# crypt

./: LICENSE  README.md  package-lock.json  package.json
src/: app.css  app.html
src-tauri/: Cargo.toml  passwords.json  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/routes/: +layout.svelte  +page.svelte
src/routes/components/: add-password-modal.svelte  button.svelte  input.svelte  master-password-modal.svelte  modal.svelte  password-list.svelte  password.svelte  settings-button.svelte  settings-modal.svelte  toast.svelte  view-password-modal.svelte
