[package]
name = "crypt"
version = "0.1.1"
description = "Crypt is a password manager app for your passwords with Aes256Gcm encryption."
authors = ["TAFH-debug"]
edition = "2021"

[lib]
name = "crypt_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
sha2 = "0.10.8"
aes-gcm = "0.10.3"
pbkdf2 = "0.12.2"
dirs-next = "2.0.0"

